--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,17 +24,17 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    //Incluir
+    // FirebaseUI
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
-    //Incluir
     compile 'com.google.firebase:firebase-database:10.2.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.android.support:cardview-v7:25.+'
-    compile 'com.android.support:design:25.+'
-    compile 'com.android.support:recyclerview-v7:25.+'
-    // FirebaseUI
+    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.firebaseui:firebase-ui:1.2.0'
+    testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
 
